--- a/src/screens/Header/views/header.scss
+++ b/src/screens/Header/views/header.scss
@@ -13,10 +13,15 @@ $drawerWidth: 240px;
     cursor: pointer;
     font-size: 18px;
     color: #121828;
+    font-weight: 500;
+    text-transform: uppercase;
   }
 
   .list-button {
     color: #10b981;
+    .MuiListItemIcon-root {
+      color: #10b981 !important;
+    }
   }
 
   .MuiPaper-root {
